--- a/moudle_titlebar/src/main/res/values/attrs.xml
+++ b/moudle_titlebar/src/main/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="TitleBar">
-
+        <attr name="isLeftMode" format="boolean" />
         <attr name="titleBarHeight" format="dimension" />
         <attr name="titleBarBackground" format="reference" />
         <attr name="contentLeftPadding" format="dimension" />
