--- a/module_view/src/main/res/values/attrs.xml
+++ b/module_view/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
         <attr name="appWidgetBackgroundColor" format="color" />
         <attr name="appWidgetTextColor" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="FloatingLabelEditText">
+        <attr name="floatingEnable" format="boolean"/>
+    </declare-styleable>
 </resources>
