--- a/module_view/src/main/res/layout/activity_main.xml
+++ b/module_view/src/main/res/layout/activity_main.xml
@@ -6,183 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
+    <com.lq.view.widgets.FloatingLabelEditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.lq.view.widgets.layout.TagLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="北京市" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="天津市" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="上海市" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="重庆市" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="河北省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="山西省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="辽宁省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="吉林省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="黑龙江省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="江苏省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="浙江省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="安徽省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="福建省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="江西省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="山东省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="河南省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="湖北省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="湖南省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="广东省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="海南省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="四川省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="贵州省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="云南省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="陕西省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="甘肃省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="青海省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="台湾省" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="内蒙古自治区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="广西壮族自治区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="西藏自治区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="宁夏回族自治区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="新疆维吾尔自治区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="香港特别行政区" />
-
-            <com.lq.view.widgets.layout.ColoredTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="澳门特别行政区" />
-        </com.lq.view.widgets.layout.TagLayout>
-    </ScrollView>
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:hint="name"
+        app:floatingEnable="true"/>
 </FrameLayout>
