--- a/module_view/src/main/res/layout/activity_main.xml
+++ b/module_view/src/main/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.lq.view.widgets.FloatingLabelEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:hint="name"
-        app:floatingEnable="true"/>
+    <com.lq.view.widgets.BatteryView
+        android:layout_width="86dp"
+        android:layout_height="148dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
 </FrameLayout>
